maintainer: "Armael <armael@isomorphis.me>"
authors: "Armael <armael@isomorphis.me>"
homepage: "https://github.com/Armael/ocaml-xkbcommon"
bug-reports: "https://github.com/Armael/ocaml-xkbcommon/issues"
opam-version: "1.2"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
#  "conf-xkbcommon"
  "ctypes"
  "ctypes-foreign"
  "dune"                {build & >= "1.0"}
  "configurator"
]
available: [ ocaml-version >= "4.04.1" ]
